Fix unit spacing issue when resizing

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ body {
 }
 
 .text-cards {
-  width: 90%;
+  width: 80%;
   padding-top: 10em;
   max-width: 40em;
   padding-bottom: 3em;
